# glutton

./: .gitignore  3dgrt_compressed_md.md  README.md  glutton.yaml  main.py  pyproject.toml
glutton/: __init__.py  __main__.py  cli.py  converter.py
